# oplab

./: .env.example  .gitattributes  .gitignore  NOTICE  README.md  alembic.ini  compose.yaml  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/web/: Dockerfile  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx
apps/web/components/: workbench.tsx
docs/: architecture.md  governance.md  roadmap.md
migrations/: env.py  script.py.mako
migrations/versions/: df85ab10c3dc_initial_domain_schema.py
scripts/: dev.ps1  smoke_harness.py
services/api/: Dockerfile
services/api/src/oplab_api/: __init__.py  main.py  schemas.py
tests/: __init__.py  conftest.py  fixtures.py  test_api.py  test_domain.py  test_harness.py  test_harness_tools.py  test_workflow.py
