[project]
name = "oplab"
version = "0.1.0"
description = "A recoverable, evidence-first operating system for a one-person research lab"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20.0",
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "beautifulsoup4>=4.12.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "langgraph>=1.1.9",
  "langgraph-checkpoint-sqlite>=3.0.3",
  "pydantic-settings>=2.7.0",
  "pypdf>=5.0.0",
  "python-multipart>=0.0.31",
  "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
  "sse-starlette>=2.1.0",
  "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "packages/core/src/oplab",
  "services/api/src/oplab_api",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
